fix for This fixes extra space on the left when using fade mode. #715

--- a/jquery.bxslider.css
+++ b/jquery.bxslider.css
@@ -26,6 +26,11 @@
 	display: block;
 }
 
+.bxslider {
+	margin: 0;
+	padding: 0;
+}
+
 /** THEME
 ===================================*/
 
